<resources>
    <string name="app_name">Chicken farm and health manager</string>
    <string name="sub_title">Chicken Manager</string>
    <string name="null_string">null</string>
    <string name="egg_title">Eggs</string>
    <string name="chicken_title">Chicken</string>
    <string name="chick_title">Chicks</string>
    <string name="disease_title">Diseases</string>
    <string name="vaccine_title">Vaccination</string>
    <string name="recodes_title">Reports</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="feeds_instructions">Select the amount of feed to formulate in Kgs, also the type of feeds to formulate and then generate formula</string>
    <string name="nb_feed_mixing">Note : For high quality and even mixing of chicken feeds ensure you use Feed Mixer which available in most welding and shops locally</string>
    <string name="stage_note">One average chicken live for 3 to 5 year but some breads can go beyond. There are three distinct Phases : \n 1. Egg \n 2. Chick \n 3. Chicken</string>

    <string name="milestone_one">Image showing pathway of chicken growth stages, including: Baby chicks, teenage chickens, laying eggs, molting chickens and laying hen retirement. Start your birds strong by providing a complete \"starter grower\" feed with at least 18 percent protein to support chick growth. The feed should also include amino acids for chick development. Chicks are also susceptible to illness. If chicks were not vaccinated for coccidiosis by the hatchery,choose a medicated chick starter feed. Medicated feeds like : \n Purina Start and Grow Medicated.</string>
    <string name="milestone_six">One day,the time may come for the veterans of a flock to take a vacation and retire from egg-laying. Although a laying hen will stop laying as she ages. At this point, transition back full circle to a higher-protein feed, such as : \n Purina and Flock Raiser.</string>
    <string name="milestone_three">Around weeks 16-17, people begin to check their nesting boxes for the coveted first egg.  At this point, consider layer feed options so you can make a smooth transition.   As compared to starter-grower, a layer chicken feed has less protein and more calcium. This added calcium is important for egg production.Look for a chicken layer feed that matches your flock goals – whether that’s \n Purina Organic Layer Pellets or Crumbles, Purina Layena.</string>
    <string name="egg_spacing">Simple and easy to design with readly available materials (20 liter cans) which are cut with enough space for the chicken to enter and and lay eggs \n NOTE \n 1. Should not be too high since egg laying chicken are heavy \n 2. Should include ladder for the chicken reach up \n 3. Always collect eggs daily to avoid damage by the chicken</string>
    <string name="feed_spacing">During feeding period chicken and chicks require enough space to avoid scrambling. This should be considered to ensure they do not crowed in one feeding point \n 1. Should have several feeding points if you have many chicken or chicks \n 2. Feeding points should also be far apart spaced </string>
    <string name="text_fowl_pox_sym">Fowl pox can come in two forms—wet or dry. In the dry form, unfeathered areas of your bird will have wart-like lesions that heal in about two weeks. The wet form of the disease features lesions appearing around the mouth and discharge from your bird’s eyes.</string>
    <string name="text_fowl_pox_tre">Since this poultry disease is a form of avian cancer, there is unfortunately not much that can be done for infected chicks. It’s also contagious since it’s a virus and is transmitted when a chicken breathes in feather dander from another infected bird. If the bird survives, it will remain a carrier of the disease for life, so it’s best to remove it from the flock early.</string>
    <string name="text_fowl_pox_pre">While this disease sounds scary, there are vaccines available. Newly hatched birds can be vaccinated for Marek’s disease to help reduce the likelihood of infection.</string>
    <string name="text_bronchitis_sym">Just like humans, your chickens can get a cold, and it’s just as contagious. If your flock becomes infected, you’ll notice that egg production will drop, the consumption of food and water will decline, there may be a discharge from the birds’ eyes and nostrils, and you may notice labored breathing from your birds.</string>
    <string name="text_bronchitis_tre">Unfortunately, there’s not much that can be done for bronchitis. You can give your birds antibiotics for a few days to make sure no other infections happen while they’re sick, but otherwise you just have to wait it out.</string>
    <string name="text_bronchitis_pre">Like fowl pox, there are a few types of preventative vaccinations against infectious bronchitis, but it’s not a guarantee. Having a good biosecurity method in place, as well as adequate rodent control should help keep the disease to a minimum.</string>
    <string name="text_merek_sym">This disease, also referred to as fowl paralysis, typically affects chickens between 12 and 25 weeks old. If your chick has developed tumors, has irregularly shaped pupils (typically results in blindness), or develops partial paralysis, it’s likely that they have Marek’s Disease.</string>
    <string name="text_merek_tre">Since this poultry disease is a form of avian cancer, there is unfortunately not much that can be done for infected chicks. It’s also contagious since it’s a virus and is transmitted when a chicken breathes in feather dander from another infected bird. If the bird survives, it will remain a carrier of the disease for life, so it’s best to remove it from the flock early.</string>
    <string name="text_merek_pre">While this disease sounds scary, there are vaccines available. Newly hatched birds can be vaccinated for Marek’s disease to help reduce the likelihood of infection.</string>
    <string name="text_Newcastle_sym">As a respiratory disease, symptoms of Newcastle (ND) tend to appear through breathing difficulties, nasal discharge, murky eyes, and a reduction in egg laying. Sometimes birds can experience twisting in their neck and paralysis in their legs and wings. There are varying strains of this poultry disease, some of which are more lethal than others.</string>
    <string name="text_Newcastle_tre">Birds will typically recover from ND and not be carriers, but if your chicks develop the disease, they will likely not survive. As with other diseases, you can give your birds antibiotics for a few days to avoid any other bacterial infections.</string>
    <string name="text_Newcastle_pre">Since the disease is carried by wild birds, keeping your flock vaccinated is very important. It’s also recommended to practice good sanitation since a person can infect other birds via clothing or shoes.</string>
    <string name="text_coccidia_sym">When your chicken has loose droppings, it’s likely they have coccidiosis, a parasite that damages the gut wall of chickens. In addition to loose droppings, you may also notice bloody or watery diarrhea, weight loss, and ruffled feathers in your chickens.</string>
    <string name="text_coccidia_tre">Since there are six species of Eimeria (the coccidiosis parasite), your bird may become immune to one kind, but contract another. You can treat this with antibiotics or other specific types of medication that will get rid of the parasite.</string>
    <string name="text_coccidia_pre">Keeping food areas, brooders, and coops clean and dry will help avoid the spread of coccidiosis. Using medicated starter feed for your unvaccinated chicks, or adding probiotic supplements to their food, is another way to help control this poultry disease.</string>
    <string name="text_auth_guide">1. After splash screen login details screen. \n 2. Fill in your cridentials Password and Username.\n 3. Click on the login button. \n 4. If all details are correct dashboard wil open.</string>
    <string name="text_dash_guide">1. The  dashboard will provide a general view of the app. \n 2. Use navigation drawer to navigate. \n 3. Click on the cards on the dashboard to open next screen. \n 4. Click on the navigation drawer to open navigation.</string>
    <string name="text_chicken_guide">1. On the dashbaord click on the card of chicken to open more. \n 2. Click on the  \"+\" button to open form for filling the details. \n 3. Fill in the details correctly. \n 4. Click on the add Button. \n 5. You will successfully add it.</string>
    <string name="text_chick_guide">1. On the dashbaord click on the card of chick to open more. \n 2. Click on the  \"+\" button to open form for filling the details. \n 3. Fill in the details correctly. \n 4. Click on the add Button. \n 5. You will successfully add it.</string>
    <string name="text_eggs_guide">1. On the dashbaord click on the card of Eggs to open more. \n 2. Click on the  \"+\" button to open form for filling the details. \n 3. Fill in the details correctly. \n 4. Click on the add Button. \n 5.Ensure that you fill egg numbers according to tray and not in tray.</string>
    <string name="text_nav_guide">1. Click on the drawer button. \n 2. Navigation drawer will open and more navigation menu will open. \n 3. Select on the menu of your choise. \n 4. Needed activity will open.</string>


</resources>
