<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChickenManagement">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="13dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="10dp"
                android:text="Medication/ Disease  :"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="14dp"
                android:text="5 most"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorDarkdOrange"
                android:textSize="22dp"
                android:layout_margin="8dp"
                android:text="Fowl Pox"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:src="@drawable/fowl_pox1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Symptoms"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_fowl_pox_sym"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Treat"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_fowl_pox_tre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Prevent"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_fowl_pox_pre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorDarkdOrange"
                android:textSize="22dp"
                android:layout_margin="8dp"
                android:text="Infectious Bronchitis"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:src="@drawable/infectious_bronchitis"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Symptoms"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_bronchitis_sym"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Treat"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_bronchitis_tre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Prevent"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_bronchitis_pre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorDarkdOrange"
                android:textSize="22dp"
                android:layout_margin="8dp"
                android:text="Marek’s Disease"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:src="@drawable/merek_disease"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Symptoms"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_merek_sym"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Treat"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_merek_tre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Prevent"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_merek_pre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorDarkdOrange"
                android:textSize="22dp"
                android:layout_margin="8dp"
                android:text="Newcastle Disease"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:src="@drawable/merek_disease"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Symptoms"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_Newcastle_sym"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Treat"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_Newcastle_tre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Prevent"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_Newcastle_pre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorDarkdOrange"
                android:textSize="22dp"
                android:layout_margin="8dp"
                android:text="Coccidiosis"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:src="@drawable/coccidia_disease"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Symptoms"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_coccidia_sym"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Treat"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_coccidia_tre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="How to Prevent"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_coccidia_pre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>







    </LinearLayout>



</ScrollView>