<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".FeedFormulation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="13dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="10dp"
                    android:text="Feed foemulation    :"/>
                <TextView
                    android:id="@+id/total_chicken_display"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="14dp"
                    android:text="@string/null_string"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/feeds_instructions"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="5dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <EditText
                                android:id="@+id/txt_feeds_amount"
                                android:inputType="number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Amount of Kgs"
                                android:background="@drawable/my_tinput"
                                />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="5dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <Spinner
                                android:id="@+id/feeds_type_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:background="@drawable/my_spinner" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_generate_formula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Generate Formula"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/my_button"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:id="@+id/tv_formula_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:textColor="@color/colorDarkdOrange"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/tv_formula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="22sp"
                    android:textColor="@color/colorBlack"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="22sp"
                    android:text="@string/nb_feed_mixing"
                    android:textColor="@color/colorBlack"
                    android:padding="8dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:src="@drawable/feed_mixer"/>

            </LinearLayout>






        </LinearLayout>
    </ScrollView>


